Revision history for Dist-Zilla-Plugin-Git-RequireUnixEOL

{{$NEXT}}

  - skip needs $how_many with Test::More < 1.302013_009
  - Removed unused test dependency on autodie
  - Code cleanup - moved all 'use' before 'has'

1.000  2018-04-02 16:13:25 UTC

  - No code changes
  - Distribution cleanup
  - Bumped dependency on Moose to 2.1203

0.002  2017-10-21 05:45:10 UTC

  - Added ignore option to ignore files

0.001  2017-10-16 21:45:09 UTC

  - Initial release