@@ -9,46 +9,37 @@ environment:
   matrix:
     - PERL_TYPE: cygwin
       AUTHOR_TESTING: 1
-      DIST_ZILLA: 6.012
 
     - PERL_TYPE: cygwin64
       AUTHOR_TESTING: 1
-      DIST_ZILLA: 6.012
 
     - PERL_TYPE: strawberry
       PERL_VERSION: 5.14.4
-      DIST_ZILLA: 6.012
       STRAWBERRY_URL: http://strawberryperl.com/download/5.14.4.1/strawberry-perl-5.14.4.1-64bit.zip
 
     - PERL_TYPE: strawberry
       PERL_VERSION: 5.16.3
-      DIST_ZILLA: 6.012
       STRAWBERRY_URL: http://strawberryperl.com/download/5.16.3.1/strawberry-perl-5.16.3.1-64bit.zip
 
     - PERL_TYPE: strawberry
       PERL_VERSION: 5.18.4
-      DIST_ZILLA: 6.012
       STRAWBERRY_URL: http://strawberryperl.com/download/5.18.4.1/strawberry-perl-5.18.4.1-64bit.zip
 
     - PERL_TYPE: strawberry
       PERL_VERSION: 5.20.3
-      DIST_ZILLA: 6.012
       STRAWBERRY_URL: http://strawberryperl.com/download/5.20.3.3/strawberry-perl-5.20.3.3-64bit.zip
 
     - PERL_TYPE: strawberry
       PERL_VERSION: 5.22.3
-      DIST_ZILLA: 6.012
       STRAWBERRY_URL: http://strawberryperl.com/download/5.22.3.1/strawberry-perl-5.22.3.1-64bit.zip
 
     - PERL_TYPE: strawberry
       PERL_VERSION: 5.24.4
-      DIST_ZILLA: 6.012
       AUTHOR_TESTING: 1
       STRAWBERRY_URL: http://strawberryperl.com/download/5.24.4.1/strawberry-perl-5.24.4.1-64bit.zip
 
     - PERL_TYPE: strawberry
       PERL_VERSION: 5.26.2
-      DIST_ZILLA: 6.012
       STRAWBERRY_URL: http://strawberryperl.com/download/5.26.2.1/strawberry-perl-5.26.2.1-64bit.zip
 
 install:
@@ -108,11 +99,9 @@ before_build:
   - where cpanm
   - perl -S cpanm --version
   - mkdir C:\tmp
-  - if     defined DIST_ZILLA     perl -S cpanm --verbose --notest --skip-satisfied Dist::Zilla@%DIST_ZILLA%
-  - if     defined DIST_ZILLA     perl -S dzil version
-  - if     defined AUTHOR_TESTING perl -S cpanm --verbose --installdeps --notest --skip-satisfied --with-develop .
-  - if not defined AUTHOR_TESTING perl -S cpanm --verbose --installdeps --notest --skip-satisfied .
-  - perl -S cpanm --verbose --notest --skip-satisfied App::ReportPrereqs
+  - if     defined AUTHOR_TESTING perl -S cpanm --verbose --installdeps --notest --with-develop .
+  - if not defined AUTHOR_TESTING perl -S cpanm --verbose --installdeps --notest .
+  - perl -S cpanm --verbose --notest App::ReportPrereqs
   - if     defined AUTHOR_TESTING perl -S report-prereqs --with-develop
   - if not defined AUTHOR_TESTING perl -S report-prereqs
 
