@@ -20,7 +20,7 @@ my %WriteMakefileArgs = (
     "Carp" => 0,
     "Dist::Zilla::Role::BeforeBuild" => 0,
     "Git::Wrapper" => 0,
-    "Moose" => "2.1203",
+    "Moose" => 0,
     "Path::Tiny" => 0,
     "Safe::Isa" => 0,
     "Try::Tiny" => 0,
@@ -33,7 +33,7 @@ my %WriteMakefileArgs = (
     "Test::DZil" => 0,
     "Test::Fatal" => 0,
     "Test::More" => "0.88",
-    "Test::TempDir::Tiny" => "0.017",
+    "Test::TempDir::Tiny" => 0,
     "lib" => 0
   },
   "VERSION" => "1.000",
@@ -48,13 +48,13 @@ my %FallbackPrereqs = (
   "Dist::Zilla::Plugin::Git::GatherDir" => 0,
   "Dist::Zilla::Role::BeforeBuild" => 0,
   "Git::Wrapper" => 0,
-  "Moose" => "2.1203",
+  "Moose" => 0,
   "Path::Tiny" => 0,
   "Safe::Isa" => 0,
   "Test::DZil" => 0,
   "Test::Fatal" => 0,
   "Test::More" => "0.88",
-  "Test::TempDir::Tiny" => "0.017",
+  "Test::TempDir::Tiny" => 0,
   "Try::Tiny" => 0,
   "lib" => 0,
   "namespace::autoclean" => 0,
